lots of css tweaks

--- a/public/css/theme-ada.css
+++ b/public/css/theme-ada.css
@@ -3,25 +3,25 @@
     
     --MAIN-TEXT-color:#323232; /* Color of text by default */
     --MAIN-TITLES-TEXT-color: #5e5e5e; /* Color of titles h2-h3-h4-h5 */
-    --MAIN-LINK-color:#599a3e; /* Color of links */
-    --MAIN-LINK-HOVER-color:#3f6d2c; /* Color of hovered links */
-    --MAIN-ANCHOR-color: #599a3e; /* color of anchors on titles */
+    --MAIN-LINK-color:#757BC7; /* Color of links */
+    --MAIN-LINK-HOVER-color:#4B2B50; /* Color of hovered links */
+    --MAIN-ANCHOR-color: #757BC7; /* color of anchors on titles */
 
-    --MENU-HEADER-BG-color:#74b559; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color:#9cd484; /*Color of menu header border */ 
+    --MENU-HEADER-BG-color:#FFFFFF; /* Background color of menu header */
+    --MENU-HEADER-BORDER-color:#FFFFFF; /*Color of menu header border */ 
     
-    --MENU-SEARCH-BG-color:#599a3e; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BOX-color: #84c767; /* Override search field border color */
-    --MENU-SEARCH-BOX-ICONS-color: #c7f7c4; /* Override search field icons color */
+    --MENU-SEARCH-BG-color:#FFFFFF; /* Search field background color (by default borders + icons) */
+    --MENU-SEARCH-BOX-color: #757BC7; /* purple- Override search field border color */
+    --MENU-SEARCH-BOX-ICONS-color: #757BC7; /* purple- Override search field icons color */
 
-    --MENU-SECTIONS-ACTIVE-BG-color:#1b211c; /* Background color of the active section and its childs */
-    --MENU-SECTIONS-BG-color:#222723; /* Background color of other sections */
-    --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
-    --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
-    --MENU-SECTION-ACTIVE-CATEGORY-color: #777; /* Color of active category text */
-    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #fff; /* Color of background for the active category (only) */
+    --MENU-SECTIONS-ACTIVE-BG-color:#D1CCE2; /* Background color of the active section and its childs */
+    --MENU-SECTIONS-BG-color:#FFFFFF; /* Background color of other sections */
+    --MENU-SECTIONS-LINK-color: #19142A; /* Color of links in menu */
+    --MENU-SECTIONS-LINK-HOVER-color: #CA9700;  /* Color of links in menu, when hovered */
+    --MENU-SECTION-ACTIVE-CATEGORY-color: #757BC7; /* Color of active category text */
+    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #4B2B50; /* Color of background for the active category (only) */
 
-    --MENU-VISITED-color: #599a3e; /* Color of 'page visited' icons in menu */
+    --MENU-VISITED-color: #4B2B50; /* Color of 'page visited' icons in menu */
     --MENU-SECTION-HR-color: #18211c; /* Color of <hr> separator in menu */
     
 }
@@ -102,3 +102,25 @@ a:hover {
     border-color: var(--MENU-SECTION-HR-color);
 }
 
+h2, h3, h4, h5, h6 {
+    font-family: "Lato" 
+}
+
+h1 {
+    font-family: "Lato",
+    text-align: center;
+    text-transform: uppercase;
+    color: #4B2B50;
+    font-weight: 200;
+}
+body {
+    font-family: "Lato"
+}
+
+#sidebar #shortcuts h3 {
+    font-family: "Lato"
+}
+
+#chapter h3 {
+    font-family: "Lato"
+}
